--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@storybook/addon-links": "^6.4.3",
     "@storybook/node-logger": "^6.4.3",
     "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.4.3"
+    "@storybook/react": "^6.4.3",
+    "chromatic": "^6.1.0"
   }
 }
